// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should allow to custom the className of action 1`] = `
<div
  role="menuitem"
  class="mi-popover__action foo"
  tabindex="0"
>
  <div class="mi-popover__action-text mi-hairline--bottom">
    Option
  </div>
</div>
`;

exports[`should change icon class prefix when using icon-prefix prop 1`] = `
<span class="mi-popover__wrapper">
</span>
<transition-stub
  name="mi-popover-zoom"
  appear="false"
  persisted="false"
  css="true"
>
  <div
    role="dialog"
    tabindex="0"
    class="mi-popup mi-popover mi-popover--light"
  >
    <div class="mi-popover__arrow">
    </div>
    <div
      role="menu"
      class="mi-popover__content mi-popover__content--vertical"
    >
      <div
        role="menuitem"
        class="mi-popover__action mi-popover__action--with-icon"
        tabindex="0"
      >
        <i class="mi-badge__wrapper my-icon my-icon-success mi-popover__action-icon">
        </i>
        <div class="mi-popover__action-text mi-hairline--bottom">
          foo
        </div>
      </div>
    </div>
  </div>
</transition-stub>
`;

exports[`should locate to reference element when showed 1`] = `"<!----><transition-stub name="mi-popover-zoom" appear="false" persisted="false" css="true"><!----></transition-stub>"`;

exports[`should locate to reference element when showed 2`] = `
<transition-stub
  name="mi-popover-zoom"
  appear="false"
  persisted="false"
  css="true"
>
  <div
    style="z-index: 2007; position: absolute; left: -50px; top: 8px; margin: 0px;"
    role="dialog"
    tabindex="0"
    class="mi-popup mi-popover mi-popover--light"
    data-popper-placement="bottom"
  >
    <div class="mi-popover__arrow">
    </div>
    <div
      role="menu"
      class="mi-popover__content mi-popover__content--vertical"
    >
    </div>
  </div>
</transition-stub>
`;

exports[`should locate to reference element when showed 3`] = `
<transition-stub
  name="mi-popover-zoom"
  appear="false"
  persisted="false"
  css="true"
>
  <div
    style="z-index: 2007; position: absolute; left: -50px; top: 8px; margin: 0px; display: none;"
    role="dialog"
    tabindex="0"
    class="mi-popup mi-popover mi-popover--light"
    data-popper-placement="bottom"
  >
    <div class="mi-popover__arrow">
    </div>
    <div
      role="menu"
      class="mi-popover__content mi-popover__content--vertical"
    >
    </div>
  </div>
</transition-stub>
`;

exports[`should render action slot correctly 1`] = `
<div
  role="menuitem"
  class="mi-popover__action"
  tabindex="0"
>
  name: Text, index: 0
</div>
`;

exports[`should watch placement prop and update location 1`] = `
<transition-stub
  name="mi-popover-zoom"
  appear="false"
  persisted="false"
  css="true"
>
  <div
    role="dialog"
    tabindex="0"
    class="mi-popup mi-popover mi-popover--light"
    style="z-index: 2008; position: absolute; left: -50px; top: -108px; margin: 0px;"
    data-popper-placement="top"
  >
    <div class="mi-popover__arrow">
    </div>
    <div
      role="menu"
      class="mi-popover__content mi-popover__content--vertical"
    >
    </div>
  </div>
</transition-stub>
`;
